@@ -1,3 +1,4 @@
 virtualmin_spam=Full path to Virtualmin spam user lookup program,3,Not installed,40
+virtualmin_config=Full path to Virtualmin config directory,3,Not installed
 warn_procmail=Show warning if Procmail is not installed?,1,1-Yes,0-No
 alias_files=Full path to global alias files,9,40,3,\t
