@@ -4,7 +4,9 @@ index_action=Filter action
 index_move=Move
 index_none=You do not have any mail filters defined yet. All email will be delivered to your Inbox.
 index_none2=None of your existing Procmail rules are simple enough to display here.
-index_none3=You do not have any mail filters defined yet. All email will be delivered to your Inbox, after spam filtering.
+index_none3=You do not have any mail filters defined yet. All email will be delivered to your Inbox, after spam classification.
+index_none4=You do not have any mail filters defined yet. All email will be deliverted to your Inbox, except spam which will be sent to the folder $1.
+index_none5=You do not have any mail filters defined yet. All email will be deliverted to your Inbox, except spam which will be sent to the file $1.
 index_add=Add a new email filter.
 index_addauto=Quick automatic reply setup.
 index_cspam=Email is spam
